@@ -1,3 +1,12 @@
+2005-08-17  John McCutchan  <ttb@tentacle.dhs.org>
+
+	* server/gam_inotify.c: (gam_inotify_add_subscription),
+	(gam_inotify_remove_subscription), (gam_inotify_nolonger_missing),
+	(gam_inotify_nolonger_link), (gam_inotify_add_link),
+	(gam_inotify_scan_links), (gam_inotify_stat_changed),
+	(gam_inotify_poll_link): Redo link handling. This should work around the
+	race. Also fixed some real bugs in the last iteration.
+
 2005-08-16  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* server/gam_inotify.c: (gam_inotify_data_new),
